# tree-sitter-rnoweb

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
bindings/c/: tree-sitter-rnoweb.pc.in
bindings/c/tree_sitter/: tree-sitter-rnoweb.h
bindings/rust/: lib.rs
formatters/: literateR-fmt
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basic.txt  engine.txt
