[package]
name = "tree-sitter-rnoweb"
description = "rnoweb grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "rnoweb"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/urtzienriquez/tree-sitter-rnoweb"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.24"

[build-dependencies]
cc = "1.0"
