[package]
name = "tree-sitter-rnoweb"
description = "tree-sitter parser for rnoweb (R NoWeb) literate programming documents"
version = "0.1.0"
keywords = ["incremental", "parsing", "rnoweb", "r", "noweb"]
categories = ["parsing", "text-editors"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/urtzienriquez/tree-sitter-rnoweb"
homepage = "https://github.com/urtzienriquez/tree-sitter-rnoweb"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.26"

[build-dependencies]
cc = "1.0"
